--- a/.github/workflows/build_with_deploy.yml
+++ b/.github/workflows/build_with_deploy.yml
@@ -14,6 +14,13 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
+      - name: Declare variables
+        id: variables
+        shell: bash
+        run: |
+          echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+          echo "::set-output name=hash::$(git rev-parse --short HEAD)"
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -37,5 +44,6 @@ jobs:
             docker run --rm --detach \
             --workdir=/app \
             --publish=8000:8000 \
+            --env VERSION=${{ steps.variables.outputs.hash }}
             lecovich/todo-app:latest \
             poetry run uvicorn app:app --host=0.0.0.0 --port=8000
