--- a/.github/workflows/build_with_deploy.yml
+++ b/.github/workflows/build_with_deploy.yml
@@ -7,7 +7,7 @@ on:
     inputs:
       environment:
         description: 'Environment'
-        required: true
+        required: false
         default: 'develop'
         type: choice
         options:
