--- a/.github/workflows/build_with_deploy.yml
+++ b/.github/workflows/build_with_deploy.yml
@@ -51,7 +51,7 @@ jobs:
           username: ${{ secrets.API_HOST_USERNAME }}
           key: ${{ secrets.API_HOST_PRIVATE_KEY }}
           script: |
-            docker stop todo-app-api;
+            docker stop todo-app-api; \
             docker run --rm --detach \
             --name=todo-app-api
             --workdir=/app \
