--- a/.github/workflows/build_with_deploy.yml
+++ b/.github/workflows/build_with_deploy.yml
@@ -42,7 +42,9 @@ jobs:
         with:
           context: backend
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USER_NAME }}/todo-app:latest
+          tags: |
+            ${{ secrets.DOCKER_HUB_USER_NAME }}/todo-app:latest,
+            ${{ secrets.DOCKER_HUB_USER_NAME }}/todo-app:${{ steps.variables.outputs.hash }}
 
       - name: Pull image and run container
         uses: appleboy/ssh-action@master
@@ -57,5 +59,5 @@ jobs:
             --workdir=/app \
             --publish=8000:8000 \
             --env VERSION=${{ steps.variables.outputs.hash }} \
-            lecovich/todo-app:latest \
+            lecovich/todo-app:${{ steps.variables.outputs.hash }} \
             poetry run uvicorn app:app --host=0.0.0.0 --port=8000
