--- a/.github/workflows/build_with_deploy.yml
+++ b/.github/workflows/build_with_deploy.yml
@@ -61,3 +61,7 @@ jobs:
             --env VERSION=${{ steps.variables.outputs.hash }} \
             lecovich/todo-app:${{ steps.variables.outputs.hash }} \
             poetry run uvicorn app:app --host=0.0.0.0 --port=8000
+
+      - name: Health check
+        run: |
+          curl -XGET 'http://${{ secrets.API_HOST }}/api/health' | jq '.status' | grep -q 'OK'
