--- a/.github/workflows/build_with_deploy.yml
+++ b/.github/workflows/build_with_deploy.yml
@@ -63,3 +63,33 @@ jobs:
             --workdir=/app \
             lecovich/todo-app:${{ steps.variables.outputs.hash }} \
             poetry run uvicorn app:app --host=0.0.0.0 --port=8000
+
+  build_frontend:
+    name: Build frontend
+    runs-on: ubuntu-latest
+    environment: ${{ github.event.inputs.environment }}
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16
+
+      - name: Packages
+        working-directory: frontend
+        run: |
+          npm install --global yarn && \
+          yarn install && \
+          yarn build
+
+      - name: Copy to bucket
+        uses: qoqa/action-s3-cp@v1.1
+        env:
+          AWS_S3_BUCKET: nlesnykh-test-bucket
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_S3_PATH: '/todo-app-static/'
+          FILE: 'frontend/build/*'
