--- a/.github/workflows/build_with_deploy.yml
+++ b/.github/workflows/build_with_deploy.yml
@@ -80,6 +80,7 @@ jobs:
       - name: Packages
         working-directory: frontend
         run: |
+          export REACT_APP_API_HOST=${{ secrets.API_HOST }}; \
           npm install --global yarn && \
           yarn install && \
           yarn build
@@ -93,5 +94,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          S3_KEY: 'todo-app-static/'
+          S3_KEY: ''
           FILE: 'frontend/build/'
